# matter-desk-light

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
common/: dimmable-light.matter  dimmable-light.zap  matter-desk-light-app.matter  matter-desk-light-app.zap
main/: CMakeLists.txt  DeviceCallbacks.cpp  Kconfig.projbuild  LEDWidget.cpp  idf_component.yml  main_app.cpp
main/include/: CHIPProjectConfig.h  DeviceCallbacks.h  LEDWidget.h
main/include/tasks/: AppEvent.h  AppTask.h  ButtonTask.h  CurrentSensorTask.h
main/tasks/: AppTask.cpp  ButtonTask.cpp  CurrentSensorTask.cpp
partition_table/: partitions_4MB_OTA.csv  partitions_4MB_factory.csv
zzz_pregenerated/common/dimmable-light/codegen/cpp-app/app/: PluginApplicationCallbacks.h  callback-stub.cpp
zzz_pregenerated/common/dimmable-light/zap/app-templates/zap-generated/: CHIPClusters.h  endpoint_config.h  gen_config.h
zzz_pregenerated/common/matter-desk-light-app/codegen/cpp-app/app/: PluginApplicationCallbacks.h  callback-stub.cpp  cluster-init-callback.cpp
zzz_pregenerated/common/matter-desk-light-app/zap/app-templates/zap-generated/: IMClusterCommandHandler.cpp  access.h  endpoint_config.h  gen_config.h
zzz_pregenerated/src/controller/data_model/controller-clusters/codegen/cpp-app/app/: callback-stub.cpp  cluster-init-callback.cpp
zzz_pregenerated/src/controller/data_model/controller-clusters/codegen/cpp-tlvmeta/tlv/meta/: clusters_meta.cpp  clusters_meta.h
zzz_pregenerated/src/controller/data_model/controller-clusters/codegen/java-jni/jni/: AccessControlClient-InvokeSubscribeImpl.cpp  AccessControlClient-ReadImpl.cpp  AccountLoginClient-InvokeSubscribeImpl.cpp  AccountLoginClient-ReadImpl.cpp  ActionsClient-InvokeSubscribeImpl.cpp  ActionsClient-ReadImpl.cpp  ActivatedCarbonFilterMonitoringClient-InvokeSubscribeImpl.cpp  ActivatedCarbonFilterMonitoringClient-ReadImpl.cpp  AdministratorCommissioningClient-InvokeSubscribeImpl.cpp  AdministratorCommissioningClient-ReadImpl.cpp  AirQualityClient-InvokeSubscribeImpl.cpp  AirQualityClient-ReadImpl.cpp  ApplicationBasicClient-InvokeSubscribeImpl.cpp  ApplicationBasicClient-ReadImpl.cpp  ApplicationLauncherClient-InvokeSubscribeImpl.cpp  ApplicationLauncherClient-ReadImpl.cpp  AudioOutputClient-InvokeSubscribeImpl.cpp  AudioOutputClient-ReadImpl.cpp  BallastConfigurationClient-InvokeSubscribeImpl.cpp  BallastConfigurationClient-ReadImpl.cpp  BarrierControlClient-InvokeSubscribeImpl.cpp  BarrierControlClient-ReadImpl.cpp  BasicInformationClient-InvokeSubscribeImpl.cpp  BasicInformationClient-ReadImpl.cpp  BinaryInputBasicClient-InvokeSubscribeImpl.cpp  BinaryInputBasicClient-ReadImpl.cpp  BindingClient-InvokeSubscribeImpl.cpp  BindingClient-ReadImpl.cpp  BooleanStateClient-InvokeSubscribeImpl.cpp  BooleanStateClient-ReadImpl.cpp  BridgedDeviceBasicInformationClient-InvokeSubscribeImpl.cpp  BridgedDeviceBasicInformationClient-ReadImpl.cpp  CHIPCallbackTypes.h  CHIPReadCallbacks.h  CarbonDioxideConcentrationMeasurementClient-InvokeSubscribeImpl.cpp  CarbonDioxideConcentrationMeasurementClient-ReadImpl.cpp  CarbonMonoxideConcentrationMeasurementClient-InvokeSubscribeImpl.cpp  CarbonMonoxideConcentrationMeasurementClient-ReadImpl.cpp  ChannelClient-InvokeSubscribeImpl.cpp  ChannelClient-ReadImpl.cpp  (+158 more)
zzz_pregenerated/src/controller/data_model/controller-clusters/zap/app-templates/zap-generated/: CHIPClusters.h  IMClusterCommandHandler.cpp  access.h  endpoint_config.h  gen_config.h
zzz_pregenerated/src/lib/format/protocol_messages/codegen/cpp-tlvmeta/tlv/meta/: protocols_meta.cpp  protocols_meta.h
